<resources>
    <string name="app">Math App Solving Problems</string>
    <string name="created">By Monyert</string>
    <string name="app_name">StudentsWork2</string>

    <string name="nav_header_title">Threads Students Project</string>
    <string name="nav_header_subtitle">2DAM Students</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="titulo_home">Home</string>
    <string name="titulo_prime_solver">Prime Number</string>
    <string name="titulo_prime_interval">Prime Number Interval</string>
    <string name="titulo_factorizar">Factorizing Numbers</string>
    <string name="titulo_menu_otros">Other functions</string>
    <string name="title_activity_prime_number">PrimeNumberActivity</string>
    <string name="text_header">Write a Number</string>
    <string name="hint_prime_number">Write here</string>
    <string name="button_prime_number">Its a Prime Number??</string>
    <string name="resultado">Yes or Not?</string>
    <string name="Interrupted_exception">AsyncTask Error</string>
    <string name="title_activity_interval_prime_number">IntervalPrimeNumberActivity</string>
    <string name="text_button_interval">Find Primes in Interval</string>
    <string name="waiting_for_numbers">Waiting for Numbers</string>
    <string name="title_activity_factorize_number">FactorizeNumberActivity</string>
    <string name="text_enter_number_factorize">Enter a Number</string>
    <string name="factorize_solution">Solution here ...</string>
    <string name="button_factorize">Factorize</string>
</resources>
